--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
                 element.style.transform = `translateX(${x}px) translateY(${y}px)`;
             });
         });
+        // 
+        // this code is copy right by me
     </script>
 </body>
 </html>
